# stellar-community-fund-contracts

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: contracts-checks.yml  neurons-checks.yml  neurons-rust-checks.yml  voting-checks.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/governance/: Cargo.toml  README.md
contracts/governance/src/: fixed_mul_floor.rs  lib.rs  neural_governance.rs  offchain.rs  storage.rs  types.rs
contracts/governance/src/neural_governance/: traits.rs
contracts/governance/src/storage/: key_data.rs
contracts/governance/tests/e2e/: auth.rs  governance.rs  mod.rs  upgrade.rs  voting.rs
contracts/governance/tests/e2e/common/: contract_utils.rs
contracts/governor/: Cargo.toml  README.md
contracts/governor/src/: contract.rs  errors.rs  settings.rs  storage.rs  vote_count.rs
contracts/governor/src/dependencies/: votes.rs
contracts/governor_wrapper/: Cargo.toml  build.rs
contracts/governor_wrapper/src/: lib.rs  storage.rs  types.rs
contracts/governor_wrapper/tests/: e2e.rs
contracts/mocks/: Cargo.toml
contracts/mocks/src/: lib.rs
contracts/nqg/: Cargo.toml  README.md
contracts/nqg/src/: lib.rs
contracts/nqg/src/admin/: traits.rs
contracts/nqg/tests/e2e/: voting.rs
contracts/nqg/tests/e2e/common/: contract_utils.rs
contracts/nqg_token/: Cargo.toml
contracts/nqg_token/src/: balance.rs  contract.rs  lib.rs  storage.rs  types.rs  votes.rs
contracts/nqg_token/tests/: e2e.rs
contracts/nqg_token/tests/e2e/: auth.rs  checkpointing.rs  contract.rs  mod.rs  token.rs  upgrade.rs  votes.rs
contracts/nqg_token/tests/e2e/common/: contract_utils.rs
contracts/offchain/: Cargo.toml
contracts/offchain/mocks/: Cargo.toml
contracts/offchain/src/: admin.rs  neural_governance.rs  types.rs
contracts/offchain/tests/e2e/: auth.rs  governance.rs
contracts/offchain/tests/e2e/common/: mod.rs
contracts/scf_token/: Cargo.toml  README.md
contracts/scf_token/fuzz/: Cargo.toml
contracts/scf_token/fuzz/fuzz_targets/: fuzz_target_1.rs
contracts/scf_token/src/: admin.rs  balance.rs  contract.rs  lib.rs  storage.rs  types.rs  votes.rs
contracts/scf_token/tests/e2e/: auth.rs  contract.rs  governor_integration.rs  mod.rs  token.rs  upgrade.rs  votes.rs
contracts/scf_token/tests/e2e/common/: contract_utils.rs
hello_world/: Nargo.toml  Prover.toml  prove_and_verify.sh
hello_world/proofs/: proof  public_inputs
hello_world/src/: main.nr
neurons/: .gitignore  Cargo.toml  README.md  rustfmt.toml
neurons/.cargo/: config.toml
neurons/src/: assigned_reputation.rs  lib.rs  main.rs  neurons.rs  offchain_data_generator.rs  prior_voting_history.rs  quorum.rs  retro_vote_quality.rs  trust_graph.rs  trust_history.rs  types.rs
neurons/src/neurons/: prior_voting_history.rs  trust_graph.rs  trust_graph_log.rs  trust_history.rs
notebooks_delete_me_later/: history_trust.csv  old_trust.csv  old_trust.ipynb  trust_history.ipynb
offchain/: .gitignore  Cargo.toml  README.md
offchain/src/: data_generator.rs  main.rs  offchain.rs
zk-circuit/: Cargo.toml
zk-circuit/src/: main.rs
