[workspace]
resolver = "2"
members = ["offchain"]

[workspace.dependencies]
soroban-sdk = "20.4.0"
soroban-fixed-point-math = "~1.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
