[workspace]
resolver = "2"
members = ["governance"]

[workspace.dependencies]
soroban-sdk = "21.4.0"
soroban-fixed-point-math = "1.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
