[workspace]
resolver = "2"
members = ["governance", "scf_token", "governor"]
edition = "2021"

[workspace.dependencies]
soroban-sdk = "23.0.2"
# soroban-fixed-point-math = "1.3.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
