[package]
name = "neurons"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.18"
wasm-bindgen = "0.2"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
