[package]
name = "neurons"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
camino = "1.1.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["console"] }
[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
