[package]
name = "offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.114"
soroban-sdk = { version = "21.0.1-preview.3", features = ["testutils", "alloc"] }
soroban-fixed-point-math = "1.1.1"
governance = { path = "../contracts/governance" }
neurons = { path = "../neurons"}