[package]
name = "governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-fixed-point-math.workspace = true

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
mocks = { path = "../mocks" }

[features]
testutils = ["soroban-sdk/testutils", "soroban-sdk/alloc"]
estimations = []
