[package]
name = "governor_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils", "soroban-sdk/alloc"]
