[package]
name = "scf_token-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "20.3.1", features = ["testutils"] }
soroban-ledger-snapshot = { version = "20.0.0-rc2" }
scf_token = { path = "..", features = ["testutils"] }
governance = { path = "../../governance", features = ["testutils"] }


[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
